[tool.poetry]
name = "postshow-v3"
version = "0.1.0"
description = "MP3 tagger and encoder wizard for XBN shows."
authors = ["s0ph0s <s0ph0s-2@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8.1,<3.10"
PySide6 = "^6"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
PyInstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
