[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "PyInstaller<6.0,>=5.1",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
dist-mac = "pyinstaller macOS.spec"
dist-win = "pyinstaller Windows.spec"

[project]
name = "postshow"
version = "3.0.3"
description = "XBN Studios' podcast encoding and tagging tool with support for chapters."
authors = [
    {name = "s0ph0s", email = "s0ph0s-2@users.noreply.github.com"},
]
dependencies = [
    "PySide6<7,>=6",
    "mutagen<2.0.0,>=1.45.1",
]
requires-python = "<3.13,>=3.8.1"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}

